# CodeGraph-Explorer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  KNOWN_LIMITATIONS.md  Makefile  README.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  skills-lock.json  test_mcp_smoke.py
.claude/: settings.json  settings.local.json
.claude/commands/: codegraph-explain.md  codegraph-find.md  codegraph-impact.md  codegraph-test-audit.md
backend/codegraph/: __init__.py  __main__.py  configure.py  mcp_server.py  plugin_sim.py  workflow.py  workflow_impact_presenter.py  workflow_test_audit_presenter.py
backend/tests/: conftest.py  test_agent_adoption.py  test_cli.py  test_configure.py  test_context_pack.py  test_coverage_gaps.py  test_csharp_extractor.py  test_csharp_frameworks.py  test_csharp_resolver.py  test_dynamic_noncode.py  test_engineering_hardening.py  test_enrich_cli.py  test_enrich_import.py  test_enrich_integration.py  test_enrich_models.py  test_enrich_prepare.py  test_enrich_validate.py  test_fingerprint.py  test_git_hook.py  test_go_extractor.py  test_go_frameworks.py  test_go_resolver.py  test_graph_edge.py  test_graph_impact.py  test_graph_models.py  test_graph_query.py  test_graph_validation.py  test_harness_manifest.py  test_harness_runner.py  test_hooks.py  test_incremental_sqlite.py  test_indexer.py  test_intermediate_store.py  test_java_extractor.py  test_java_frameworks.py  test_language_extractor.py  test_language_registry.py  test_language_resolver.py  test_language_schema.py  test_mcp_final_regression.py  (+20 more)
docs/: UI-DESIGN-v3.md  agent-adoption-p0-test.md  agent-adoption-real-ab.md  agent-adoption-test.md  agent-usage-reminder.md  audit-report-2026-06-01.md  baseline-current-state.md  benchmark.md  development.md  evidence-pack.md  final-agent-adoption-regression.md  git-hooks.md  language-support.md  mcp-tools.md  multi-project-setup.md  storage.md  troubleshooting.md
docs/PRD/: 01-overview.md  02-scenarios-and-architecture.md  03-commands.md  04-graph-schema.md  05-context-pack-schema.md  05-evidence-pack-schema.md  06-context-pack-generation.md  06-evidence-pack-generation.md  07-api-and-dashboard.md  08-indexing-and-impact.md  09-rules-and-acceptance.md  10-development-plan.md  11-harness-framework.md  INDEX.md
docs/experiments/: ab-comparison.md
figma_exported_code/: README.md  index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  test-setup.ts
scripts/: run_simulation.py
(+331 files in other folders)
