[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph"
version = "1.0.0-rc.1"
description = "AI Agent-first code context and exploration tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
watch = ["watchdog>=4.0.0"]
ts = ["tree-sitter>=0.21.0,<0.22.0", "tree-sitter-languages>=1.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
codegraph = "codegraph.cli.main:app"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
codegraph = ["py.typed", "templates/claude_commands/*.md", "templates/agents/*.md"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
pythonpath = ["backend"]

[tool.coverage.run]
source = ["codegraph"]
omit = ["*/tests/*"]
